# Spacer-Chat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
app/: config.py
evaluation/: evaluation.ipynb  test_data.json
rag/: chain.py  memory.py
rag/core/generation/: chat_prompt.json  generator.py  llm_provider.py  prompt_builder.py
rag/core/indexing/: cleaner.py  indexer.py
rag/core/retrieval/: retriever.py
schemas/: chat_response.py
