[project]
name = "spacer-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "pydantic-settings>=2.13.0",
    "pymysql>=1.1.2",
    "pypdf>=6.7.1",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
    "tidb-vector>=0.0.15",
    "uvicorn>=0.41.0",
]
